# FreeRTOS-Pico-Template

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  install.md  install.txt
include/: FreeRTOSConfig.h
src/: main.c
